--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -40,4 +40,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:5000/api/health || exit 1
 
 # Run the application
-CMD ["python3", "app.py"]
+CMD ["python3", "main.py"]
