--- a/two_link_arm_sim/package.xml
+++ b/two_link_arm_sim/package.xml
@@ -22,7 +22,8 @@
   
   <depend>gazebo_msgs</depend>
   
-  <depend>xacro</depend>
+  <build_depend>xacro</build_depend>
+  <exec_depend>xacro</exec_depend>
   
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
